finished timer and base react rendering

--- a/001-project/index.html
+++ b/001-project/index.html
@@ -35,8 +35,8 @@
 
 
 
-    // var myButton = React.createElement('button', null, 'Click Me!');
-    // console.log(JSON.stringify(myButton));
+    var myButton = React.createElement('button', null, 'Click Me!');
+    console.log(JSON.stringify(myButton));
     // ReactDOM.render(myButton, document.getElementById('app'));
     </script>
 
