added link to babel element customizator

--- a/003-Checkerboard/index.html
+++ b/003-Checkerboard/index.html
@@ -14,6 +14,7 @@
     <script>
     var selector = document.getElementById("app");
 
+    // the link how to customize React element  https://babeljs.io/repl/#?babili=false&browsers=&build=&builtIns=false&code_lz=GYVwdgxgLglg9mABACwKYBt1wBQEpEDeAUIogE6pQhlIA8AJjAG6IDOUAnuqgLwBEaGAHNkUAFwAmAAwAHAB58AfAAkMWRAHc4ZdPQCEtAPSMmigNxEAvkSA&debug=false&forceAllTransforms=false&shippedProposals=false&circleciRepo=&evaluate=false&fileSize=false&lineWrap=true&presets=react&prettier=false&targets=&version=6.26.0&envVersion=
     var styles = {
       row: {height: '20px'},
       colorA: {backgroundColor: 'black'},
