--- a/003-Checkerboard/index.html
+++ b/003-Checkerboard/index.html
@@ -20,6 +20,7 @@
       colorA: {backgroundColor: 'black'},
       colorB: {backgroundColor: 'red'},
       getAccess: () => this.colorA.backgroundColor,
+      // obj.getAccess() - to make it work;
       cellA: {height: '20px', width: '20px', display:'inline-block', background: "black"},
       cellB: {height: '20px', width: '20px', display:'inline-block', background: "red" }
     }
